# UDP_filestream

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
common/: CMakeLists.txt  CmakeLists.txt  common.hpp  udp_socket.cpp  udp_socket.h  udp_socket_unix.cpp  udp_socket_w32.cpp
udp_client/: CMakeLists.txt  client.cpp  client.h  main.cpp
udp_server/: CMakeLists.txt  main.cpp  server.cpp  server.h
